tests/sumo/output/vtypeprobe/errors/id_empty/errors.sumo
Warning: VTypeProbes are deprecated. Use fcd-output devices (assigned to the vType) instead.
Error: Attribute 'id' in definition of a vTypeProbe is empty.
Quitting (on error).
